// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateEdit Component should match create new snapshot 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item"
      >
        <a
          href="/states"
        >
          State Scores
        </a>
      </li>
      <li
        aria-current="page"
        className="breadcrumb-item active"
      >
        State Name
      </li>
    </ol>
  </nav>
  <form>
    <div
      className="pb-4"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="state-name-1"
        >
          Name
        </label>
        <input
          className="form-control"
          defaultValue="State Name"
          id="state-name-1"
          name="name"
          onKeyUp={[Function]}
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="state-abbrev-1"
        >
          Abbreviation
        </label>
        <input
          className="form-control"
          defaultValue="SN"
          id="state-abbrev-1"
          name="abbrev"
          onKeyUp={[Function]}
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="state-grade-1"
        >
          Grade
        </label>
        <select
          className="form-control"
          id="state-grade-1"
          name="grade"
          onChange={[Function]}
          placeholder="Select Grade"
          value={0}
        >
          <option
            disabled={true}
            value=""
          >
            Select Grade
          </option>
          <option
            value="0"
          >
            A
          </option>
          <option
            value="1"
          >
            B
          </option>
          <option
            value="2"
          >
            C
          </option>
          <option
            value="3"
          >
            D
          </option>
          <option
            value="4"
          >
            F
          </option>
        </select>
      </div>
    </div>
  </form>
  <hr
    className="pb-0"
  />
  <div
    className="d-flex align-items-end justify-content-end"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
    >
      Save
    </button>
  </div>
</div>
`;

exports[`StateEdit Component should match edit view snapshot 1`] = `
<div>
  <nav
    aria-label="breadcrumb"
  >
    <ol
      className="breadcrumb"
    >
      <li
        className="breadcrumb-item"
      >
        <a
          href="/states"
        >
          State Scores
        </a>
      </li>
      <li
        aria-current="page"
        className="breadcrumb-item active"
      >
        New State
      </li>
    </ol>
  </nav>
  <form>
    <div
      className="pb-4"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="state-name-undefined"
        >
          Name
        </label>
        <input
          className="form-control"
          id="state-name-undefined"
          name="name"
          onKeyUp={[Function]}
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="state-abbrev-undefined"
        >
          Abbreviation
        </label>
        <input
          className="form-control"
          id="state-abbrev-undefined"
          name="abbrev"
          onKeyUp={[Function]}
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="state-grade-undefined"
        >
          Grade
        </label>
        <select
          className="form-control"
          id="state-grade-undefined"
          name="grade"
          onChange={[Function]}
          placeholder="Select Grade"
        >
          <option
            disabled={true}
            value=""
          >
            Select Grade
          </option>
          <option
            value="0"
          >
            A
          </option>
          <option
            value="1"
          >
            B
          </option>
          <option
            value="2"
          >
            C
          </option>
          <option
            value="3"
          >
            D
          </option>
          <option
            value="4"
          >
            F
          </option>
        </select>
      </div>
    </div>
  </form>
  <hr
    className="pb-0"
  />
  <div
    className="d-flex align-items-end justify-content-end"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
    >
      Save
    </button>
  </div>
</div>
`;
